[package]
name = "voxel-renderer"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[build-dependencies]
cargo_metadata = { version = "0.14.0" }
ron = { version = "0.6.4" }

[dependencies]
engine-macros = { path = "../../../../engine-macros" }
engine-use = { path = "../../../../engine-use" }
ron = { version = "0.6.4" }
serde = { version = "1.0.77", features = ["derive"] }
